--- a/datasum.qmd
+++ b/datasum.qmd
@@ -10,18 +10,21 @@ Updated on [**17 June 2023**]{.underline}
 
 ## Enteric diseases data
 
-Records of enteric disease cases from 1993 to 2024 from 48 nations, encompassing government vital statistics, surveillance systems, hospital databases, and health insurance data, were provided by ClimED members. A total of 664,501 deaths, 62 million hospital admissions, 103 million hospital visits (outpatient and emergency room departments), 106 million episodes (all health insurance reimbursements), and 185 million surveillance cases were compiled. The following table lists the details of the compiled raw data:
+Records of enteric disease cases from 1993 to 2024 from 48 nations, encompassing government vital statistics, surveillance systems, hospital databases, and health insurance data, were provided by ClimED members. A total of 664,501 deaths, 62 million hospital admissions, 103 million hospital visits (outpatient and emergency room departments), 106 million episodes (all health insurance reimbursements), and 185 million surveillance cases were compiled. @tbl-data lists the details of the compiled raw data.
 
 ```{r}
+#| label: tbl-data
+#| tbl-cap: "Details of raw enteric diseases dataset"
+
 library(reactable)
 tab1 <- read.csv("table_data.csv")
 reactable(
-  tab1[,c("Region","Country","Type","Total","Start_year","End_year","Temporal","Subnational_level",
-         "Age","Sex","Pathogens","database.source")],
+  tab1[,c("Region","Country","Type","Total","Start_year","End_year","Temporal","Subnational_level","Age","Sex","Pathogens","database.source")],
   resizable = TRUE,
   sortable = TRUE,
   wrap = FALSE,
-  pagination = FALSE,
+  pagination = TRUE,
+  defaultPageSize = 30,
   columns = list(
     Country = colDef(name = "Nation"),
     Type = colDef(name = "Health Outcome"),
@@ -36,14 +39,16 @@ reactable(
     database.source = colDef(name = "Source")
     ),
   outlined = TRUE,
-  striped = TRUE,
-  elementId = "tbl"
+  striped = TRUE
   )
 ```
 
-Some enteric disease data are pathogen-specific, especially from surveillance systems in high-income countries. Some pathogens were derived from ICD 10 codes A00 to A09. The major pathogens included in the compiled dataset are:
+Some enteric disease data are pathogen-specific, especially from surveillance systems in high-income countries. Some pathogens were derived from ICD 10 codes A00 to A09. The major pathogens included in the compiled dataset are shown in @tbl-pathogen.
 
 ```{r}
+#| label: tbl-pathogen
+#| tbl-cap: "Pathogen-specific information"
+
 library(reactable)
 tab2 <- read.csv("table_pathogen.csv")
 reactable(
@@ -61,17 +66,22 @@ reactable(
     Surveillance = colDef(name = "Surveillance Cases")
     ),
   outlined = TRUE,
-  striped = TRUE,
-  elementId = "tbl"
+  striped = TRUE
   )
 ```
 
 ## Processed exposure-outcome dataset
 
-The raw enteric diseases data were processed into weekly time series at the most appropriate subnational administrative level (i.e., aggregation at higher subnational level were done whenever number of cases are too few). The weekly format were mostly in ISO weeks and some countries were in EPI week to follow a consistent 7-day aggregation with the year value following the ISO and EPI week formats. Figures 1, 2, and 3 are sample plots of spatial and temporal resolution of the processed enteric disease dataset.
+The raw enteric diseases data were processed into weekly time series at the most appropriate subnational administrative level (i.e., aggregation at higher subnational level were done whenever number of cases are too few). The weekly format were mostly in ISO weeks and some countries were in EPI week to follow a consistent 7-day aggregation with the year value following the ISO and EPI week formats. @fig-easia, @fig-europe, and @fig-mnl1 are sample plots of spatial and temporal resolution of the processed enteric disease dataset.
 
-Subcountry level figures
+![Total all-cause enteric disease cases by subnational units of East Asian nations. Number of cases are shown in quartiles by nation because each system varies and numbers of cases are very high in South Korea.](climed_website_fig1.png){#fig-easia width="700"}
 
-Time series plots
+![Total Campylobacter cases by subnational units of some European countries. Country-level reports from Spain, France, Norway, and others are excluded.](climed_website_fig2.png){#fig-europe width="700"}
 
-Climate-related exposures were extracted from open source datasets using bespoke R functions to fit the temporal and spatial resolution of the enteric diseases data (i.e., considering local time zones). Initial climate-related exposures included 2-meter temperature (°C) and total precipitation (mm) collected from ERA5 (i.e., Fifth generation re-analysis data by European Centre for Medium-Range Weather Forecasts) and ERA5-Land (via [Climate Data Store](https://cds.climate.copernicus.eu/)), as well as sustained maximum wind speed (m/s) and total rainfall (mm) due to tropical cyclones collected from ISIMIP3a (via [ISIMIP Repository](https://data.isimip.org/)). Population density from GPWv411 (Gridded Population of the World Version 4.11) and climate zone categorization from [Beck et al. (2023)](https://www.nature.com/articles/s41597-023-02549-6) were extracted for each subnational level. All R and Python codes are available [here](https://github.com/paulcarlos/climed_codes).
+![Weekly cases of mortality and hospital admissions in Metro Manila, Philippines](climed_website_fig3.png){#fig-mnl1 width="700"}
+
+Climate-related exposures were extracted from open source datasets using bespoke R functions to fit the temporal and spatial resolution of the enteric diseases data (i.e., considering local time zones). Initial climate-related exposures included 2-meter temperature (°C) and total precipitation (mm) collected from ERA5 (i.e., Fifth generation re-analysis data by European Centre for Medium-Range Weather Forecasts) and ERA5-Land (via [Climate Data Store](https://cds.climate.copernicus.eu/)), as well as sustained maximum wind speed (m/s) and total rainfall (mm) due to tropical cyclones collected from ISIMIP3a (via [ISIMIP Repository](https://data.isimip.org/)). Population density from GPWv411 (Gridded Population of the World Version 4.11) and climate zone categorization from [Beck et al. (2023)](https://www.nature.com/articles/s41597-023-02549-6) were extracted for each subnational level. All R and Python codes are available [here](https://github.com/paulcarlos/climed_codes). @fig-mnl2 and @fig-mnl3 are sample plots of climate-related variables extracted.
+
+![Weekly temperature and rainfall in Metro Manila, Philippines. Blue bars are rainfall and red lines are temperature.](climed_website_fig4.png){#fig-mnl2 width="800"}
+
+![Weekly tropical cylone maximum winds and total rainfall in Metro Manila, Philippines. Red circles are wind speeds and blue bars are total rainfall.](climed_website_fig5.png){#fig-mnl3 width="800"}
